--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^19.2.1",
     "react-datepicker": "^8.10.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.0",
     "three": "^0.181.1",
     "zod": "^4.1.12"
